# yew-x

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml
crates/api/: Cargo.toml
crates/api/migrations/: 20260313183944_initial_schema.sql  20260313183947_seed_data.sql  20260313190000_add_comments.sql
crates/api/src/: main.rs
crates/api/src/api/: errors.rs  middleware.rs  mod.rs  schemas.rs
crates/api/src/api/routes/: auth.rs  comments.rs  mod.rs  notifications.rs  tweets.rs  users.rs
crates/api/src/application/: mod.rs
crates/api/src/application/auth/: ports.rs  use_cases.rs
crates/api/src/application/comments/: ports.rs  use_cases.rs
crates/api/src/application/notifications/: ports.rs  use_cases.rs
crates/api/src/application/ports/: notification_repository.rs  tweet_repository.rs  user_repository.rs
crates/api/src/application/shared/: mod.rs  time.rs  unit_of_work.rs
crates/api/src/application/tweets/: ports.rs  use_cases.rs
crates/api/src/application/use_cases/: create_tweet.rs  get_notifications.rs  (+6 more)
crates/api/src/domain/: error.rs  mod.rs
crates/api/src/infrastructure/: database.rs  mod.rs  models.rs
crates/web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
crates/web/src/: app.rs  main.rs  router.rs
crates/web/src/components/: icons.rs  layout.rs  sidebar.rs
crates/web/src/features/: mod.rs
crates/web/src/hooks/: mod.rs  query_client.rs  use_mutation.rs  use_query.rs
crates/web/src/pages/: home_page.rs  mod.rs  notifications_page.rs  profile_page.rs  tweet_detail_page.rs
crates/web/src/shared/: api_client.rs
(+87 files in other folders)
