[package]
name = "yew-x-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.8"
